--- a/ghost/admin/app/styles/patterns/forms.css
+++ b/ghost/admin/app/styles/patterns/forms.css
@@ -290,7 +290,7 @@ textarea {
 
 .gh-select svg {
     height: 8px;
-    width: 8px;
+    width: 14px;
     position: absolute;
     top: 50%;
     right: 1.2rem;
